Pipes: A Data Flow Framework using Process Graphs 
"http://pipes.tinkerpop.com":http://pipes.tinkerpop.com


h2. Pipes 1.X

h3. Version 1.1 (NOT OFFICIALLY RELEASED YET)

```xml
<dependency>
  <groupId>com.tinkerpop</groupId>
  <artifactId>pipes</artifactId>
  <version>1.1-SNAPSHOT</version>
</dependency>
```

* The @gather@-step in @PipesPipeline@ has the transformation step internal to it and thus, not two pipes when PipeFunction provided
* @GatherPipe@ no longer locks on looping and is semantically sound for depth-first traversing
* Added @Pipe.enablePath(boolean)@ method to support the turning on/off of path calculations (efficiency reasons)
* Renamed @Pipe.getPath()@ to @Pipe.getCurrentPath()@
* @SideEffectCapPipe@ moved to the @transform@ package as it was wrongly organized in the @sideeffect@ package
* Fixed an indexing issue in @ExhaustMergePipe@ that made itself apparent when two split/merges happened in the same pipeline
* Added @Tree@ and @TreePipe@ to return a tree representation of a traversal
* Merged @PathPipe@ and @PathFunctionPipe@ into one class called @PathPipe@

h2. Pipes 0.X

!https://github.com/tinkerpop/pipes/raw/master/doc/images/pipes-pipes.png!

h3. Version 1.0 (Pipes -- February 28, 2012)

```xml
<dependency>
  <groupId>com.tinkerpop</groupId>
  <artifactId>pipes</artifactId>
  <version>1.0</version>
</dependency>
```

* Added @SelectPipe@ to select the objects of named steps from a pipeline
* Separated @Row@ from @Table@ so it can be reused by other pipes (e.g. @SelectPipe@)
* Heavily reworked @PipesFluentPipeline@ JavaDoc to make it a single point of reference
* Updated @LoopPipe@ semantics such that if there is an emit function, then the final object in a while isn't returned
* Updated @GroupCountFunctionPipe@ semantics such that the value-function gets a @Pair@ containing incoming object and last value for that object
* Reorganized the @com.tinkerpop.pipes.util@ package