@@ -30,22 +30,12 @@ public abstract class AbstractPipe<S, E> implements Pipe<S, E> {
     protected E currentEnd;
     private boolean available = false;
     protected boolean pathEnabled = false;
-    protected boolean startsIsAPipe = false;
-    protected boolean startsIsAHistoryIterator = false;
-
-    public void setStarts(final Pipe<?, S> starts) {
-        this.setStarts(starts.iterator());
-    }
 
     public void setStarts(final Iterator<S> starts) {
         if (starts instanceof Pipe) {
             this.starts = starts;
-            this.startsIsAPipe = true;
-            this.startsIsAHistoryIterator = false;
         } else {
             this.starts = new HistoryIterator<S>(starts);
-            this.startsIsAHistoryIterator = true;
-            this.startsIsAPipe = false;
         }
     }
 
@@ -53,8 +43,12 @@ public abstract class AbstractPipe<S, E> implements Pipe<S, E> {
         this.setStarts(starts.iterator());
     }
 
+    public void setStarts(final Pipe<?, S> starts) {
+        this.setStarts(starts.iterator());
+    }
+
     public void reset() {
-        if (this.startsIsAPipe)
+        if (this.starts instanceof Pipe)
             ((Pipe) this.starts).reset();
 
         this.nextEnd = null;
@@ -104,7 +98,7 @@ public abstract class AbstractPipe<S, E> implements Pipe<S, E> {
 
     public void enablePath(final boolean enable) {
         this.pathEnabled = enable;
-        if (this.startsIsAPipe)
+        if (this.starts instanceof Pipe)
             ((Pipe) this.starts).enablePath(enable);
     }
 
@@ -125,9 +119,9 @@ public abstract class AbstractPipe<S, E> implements Pipe<S, E> {
     protected abstract E processNextStart() throws NoSuchElementException;
 
     protected List getPathToHere() {
-        if (this.startsIsAPipe) {
+        if (this.starts instanceof Pipe) {
             return ((Pipe) this.starts).getCurrentPath();
-        } else if (this.startsIsAHistoryIterator) {
+        } else if (this.starts instanceof HistoryIterator) {
             final List list = new ArrayList();
             list.add(((HistoryIterator) this.starts).getLast());
             return list;
